--- a/style/site.scss
+++ b/style/site.scss
@@ -6,8 +6,6 @@
 	font-style: normal;
 }
 
-$planet-size: 75vmin;
-$blue: #007eff;
 *,
 *:before,
 *:after {
@@ -27,64 +25,7 @@ body {
 	background-size: cover;
 	background-position: center;
 	color: #eee;
-}
-
-figure#planet {
-	width: $planet-size;
-	height: $planet-size;
-	top: -(($planet-size + 15) / 2);
-	position: absolute;
-	left: 0;
-	right: 0;
-	margin: 0 auto;
-	border-radius: $planet-size;
-	display: block;
-	background: $blue;
-	transition: all 250ms ease;
-	box-shadow: 0 0 100px rgba(255, 255, 255, 0.5), inset 0 0 100px rgba(255, 255, 255, 0.5), inset 0 0 0 5px rgba(0, 0, 0, 0.2);
-	//Gradient fade
-	&:after {
-		position: absolute;
-		content: "";
-		display: block;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background: linear-gradient(-25deg, transparent, #000);
-		border-radius: $planet-size;
-		opacity: 0.8;
-		transition: all 100ms ease;
-	}
-	&:hover {
-		cursor: pointer;
-		&:after {
-			opacity: 0.7;
-		}
-	}
-	&:active,
-	&:focus {
-		transition: all 50ms ease;
-		transform: scale(1.01);
-		&:before {
-			box-shadow: 0 0 5px #000;
-		}
-	}
-}
-
-section.info {
-	margin-top: $planet-size / 2;
-	width: 100%;
-	padding: 5vw 5vh;
-	margin-top: 10vh;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	align-items: center;
-	>:last-child {
-		padding: 0;
-		width: 30vmax;
-	}
+	overflow: hidden;
 }
 
 h1,
@@ -98,8 +39,6 @@ h6 {
 
 h1 {
 	font-family: "Prime Regular";
-	border: 2px solid $blue;
-	color: $blue;
 	padding: 0 1em;
 	border-top: none;
 	border-bottom: none;
@@ -107,94 +46,4 @@ h1 {
 	text-transform: uppercase;
 	background: linear-gradient(transparent, #000);
 	display: inline-block;
-}
-
-div.info-box {
-	width: 35vw;
-	max-width: 300px;
-	border: 1px solid $blue;
-	border-left-width: 2px;
-	border-top-right-radius: 3px;
-	border-bottom-right-radius: 3px;
-	padding: 10px;
-	color: $blue;
-	background: rgba(0, 0, 0, 0.5);
-	box-shadow: 0 0 10px $blue;
-	text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
-	table {
-		width: 100%;
-		table-layout: fixed;
-		border-collapse: collapse;
-		tr {
-			td {
-				padding: 15px 10px;
-				text-transform: uppercase;
-				&:last-child {
-					text-align: right;
-				}
-			}
-			&:not(:last-child) {
-				border-bottom: 1px solid $blue;
-			}
-		}
-	}
-}
-
-h1#planet-name {
-	background: none;
-	border: none;
-	font-family: Orbitron;
-	font-weight: 700;
-	font-size: 5vw;
-	color: #fff;
-	text-shadow: 0 0 100px #fff, 0 0 50px $blue;
-	margin: 0;
-	padding: 0;
-	text-align: center;
-	width: 100%;
-}
-
-nav {
-	font-size: 1.5em;
-	position: absolute;
-	bottom: 5vh;
-	width: 100%;
-	ul {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-around;
-		li {
-			color: $blue;
-			text-shadow: 0 0 5px $blue;
-			margin-bottom: 10px;
-			transition: all 500ms ease;
-			border-bottom: 1px solid transparent;
-			text-transform: uppercase;
-			&.current {
-				color: #fff;
-				text-shadow: 0 0 10px #fff;
-				border-bottom: 1px solid #fff;
-			}
-			&:hover:not(.current) {
-				color: lighten($blue, 10%);
-				text-shadow: 0 0 5px lighten($blue, 10%);
-				border-bottom: 1px solid $blue;
-			}
-			&:hover {
-				transition: all 100ms ease;
-				box-shadow: 0 5px 0 #fff;
-			}
-			&:active {
-				transform: scale(0.98);
-			}
-			a {
-				color: inherit;
-				text-decoration: none;
-				padding: 10px;
-			}
-		}
-	}
 }
