--- a/style/site.scss
+++ b/style/site.scss
@@ -6,6 +6,7 @@
 	font-style: normal;
 }
 
+$primary: #6a00ff;
 *,
 *:before,
 *:after {
@@ -40,10 +41,84 @@ h6 {
 h1 {
 	font-family: "Prime Regular";
 	padding: 0 1em;
+	color: $primary;
+	text-shadow: 0 2px 0 darken($primary, 20%);
 	border-top: none;
 	border-bottom: none;
 	line-height: 1.5em;
 	text-transform: uppercase;
 	background: linear-gradient(transparent, #000);
 	display: inline-block;
+	width: 100%;
+	text-align: center;
+}
+
+#side {
+	position: absolute;
+	top: 0;
+	left: -20vw;
+	height: 100vh;
+	width: 20vw;
+	background: #111;
+	transition: left 250ms ease;
+	z-index: 1;
+	border-right: 1px solid $primary;
+	box-shadow: 0 0 15px 2px $primary;
+	overflow-y: auto;
+	overflow-x: hidden;
+	.planet-table-container {
+		padding: 15px;
+		margin-bottom: 30px;
+	}
+	&::-webkit-scrollbar {
+		width: 8px;
+	}
+	&::-webkit-scrollbar-track {
+		background: darken($primary, 30%);
+	}
+	&::-webkit-scrollbar-thumb {
+		border-radius: 12px;
+		background: $primary;
+		box-shadow: inset 0 0 3px lighten($primary, 25%), 2px 0 25px $primary;
+		z-index: 3;
+	}
+}
+
+#side-toggle {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	transition: left 250ms ease;
+	margin: 0 0 0 -1px;
+	&:checked {
+		left: 20vw;
+		& ~ #side {
+			left: 0;
+		}
+	}
+	&:before {
+		content: "";
+		cursor: pointer;
+		display: block;
+		top: 0;
+		left: 0;
+		background: $primary;
+		border-bottom-right-radius: 50px;
+		box-shadow: 0 0 15px 2px $primary;
+		border: 1px solid $primary;
+		border-left-color: transparent;
+		border-top-color: transparent;
+		width: 50px;
+		height: 50px;
+	}
+}
+
+footer {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	padding: 10px;
+	font-size: 0.6em;
+	pointer-events: none;
 }
