--- a/style/solar-system-style.css
+++ b/style/solar-system-style.css
@@ -4,12 +4,30 @@ div#tooltip {
   background: rgba(0, 0, 0, 0.5);
   border-radius: 3px;
   min-width: 200px;
+  max-width: 300px;
   min-height: 300px;
   top: 50%;
   left: 50%;
   pointer-events: none;
   margin-left: 20px;
   margin-top: 20px;
-  opacity: 0; }
+  opacity: 0;
+  padding: 10px; }
+
+/* line 17, Z:/xampp/htdocs/SolarSystem2/Planets/style/solar-system-style.scss */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed; }
+  /* line 21, Z:/xampp/htdocs/SolarSystem2/Planets/style/solar-system-style.scss */
+  table tr td {
+    vertical-align: top;
+    padding: 10px;
+    text-shadow: 0 1px 0 #aaa; }
+    /* line 25, Z:/xampp/htdocs/SolarSystem2/Planets/style/solar-system-style.scss */
+    table tr td small {
+      text-shadow: none;
+      font-size: 0.8em;
+      opacity: 0.8; }
 
 /*# sourceMappingURL=solar-system-style.css.map */
