Now using embedded webfont for body text

--- a/style/site.css
+++ b/style/site.css
@@ -15,7 +15,7 @@ html, body {
 
 /* line 21, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
 body {
-  font-family: Prime, sans-serif;
+  font-family: "Prime Regular", sans-serif;
   font-size: 1.2em;
   background: #111 url(../img/Space.png) no-repeat;
   background-attachment: fixed;
