--- a/style/site.scss
+++ b/style/site.scss
@@ -19,7 +19,7 @@ body {
 }
 
 body {
-	font-family: Prime, sans-serif;
+	font-family: "Prime Regular", sans-serif;
 	font-size: 1.2em;
 	background: #111 url(../img/Space.png) no-repeat;
 	background-attachment: fixed;
