Added satellites to tables

--- a/style/site.css
+++ b/style/site.css
@@ -24,12 +24,9 @@ body {
   color: #eee;
   overflow: hidden; }
 
-/* line 37, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
-h1, h2, h3, h4, h5, h6 {
-  margin: 0; }
-
-/* line 41, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
-h1 {
+/* line 34, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+h1, h2, h3 {
+  margin: 0;
   font-family: "Prime Regular";
   padding: 0 1em;
   color: #6a00ff;
@@ -43,7 +40,11 @@ h1 {
   width: 100%;
   text-align: center; }
 
-/* line 56, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+/* line 51, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+h2, h3 {
+  background: #0b0b0b; }
+
+/* line 55, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
 #side {
   position: absolute;
   top: 0;
@@ -57,24 +58,24 @@ h1 {
   box-shadow: 0 0 15px 2px #6a00ff;
   overflow-y: auto;
   overflow-x: hidden; }
-  /* line 69, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 68, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side .planet-table-container {
     padding: 15px;
     margin-bottom: 30px; }
-  /* line 73, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 72, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side::-webkit-scrollbar {
     width: 8px; }
-  /* line 76, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 75, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side::-webkit-scrollbar-track {
     background: #2a0066; }
-  /* line 79, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 78, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side::-webkit-scrollbar-thumb {
     border-radius: 12px;
     background: #6a00ff;
     box-shadow: inset 0 0 3px #b480ff, 2px 0 25px #6a00ff;
     z-index: 3; }
 
-/* line 87, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+/* line 86, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
 #side-toggle {
   position: absolute;
   top: 0;
@@ -82,13 +83,13 @@ h1 {
   z-index: 1;
   transition: left 250ms ease;
   margin: 0 0 0 -1px; }
-  /* line 94, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 93, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side-toggle:checked {
     left: 20vw; }
-    /* line 96, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+    /* line 95, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
     #side-toggle:checked ~ #side {
       left: 0; }
-  /* line 100, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 99, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side-toggle:before {
     content: "";
     cursor: pointer;
@@ -104,7 +105,7 @@ h1 {
     width: 50px;
     height: 50px; }
 
-/* line 117, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+/* line 116, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
 footer {
   position: absolute;
   bottom: 0;
