--- a/style/site.scss
+++ b/style/site.scss
@@ -31,14 +31,8 @@ body {
 
 h1,
 h2,
-h3,
-h4,
-h5,
-h6 {
+h3 {
 	margin: 0;
-}
-
-h1 {
 	font-family: "Prime Regular";
 	padding: 0 1em;
 	color: $primary;
@@ -51,6 +45,11 @@ h1 {
 	display: inline-block;
 	width: 100%;
 	text-align: center;
+}
+
+h2,
+h3 {
+	background: #0b0b0b;
 }
 
 #side {
