Improved distinction between h1 and h2, h3

--- a/style/site.css
+++ b/style/site.css
@@ -42,9 +42,10 @@ h1, h2, h3 {
 
 /* line 51, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
 h2, h3 {
+  color: #d2b3ff;
   background: #0b0b0b; }
 
-/* line 55, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+/* line 56, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
 #side {
   position: absolute;
   top: 0;
@@ -58,24 +59,24 @@ h2, h3 {
   box-shadow: 0 0 15px 2px #6a00ff;
   overflow-y: auto;
   overflow-x: hidden; }
-  /* line 68, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 69, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side .planet-table-container {
     padding: 15px;
     margin-bottom: 30px; }
-  /* line 72, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 73, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side::-webkit-scrollbar {
     width: 8px; }
-  /* line 75, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 76, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side::-webkit-scrollbar-track {
     background: #2a0066; }
-  /* line 78, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 79, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side::-webkit-scrollbar-thumb {
     border-radius: 12px;
     background: #6a00ff;
     box-shadow: inset 0 0 3px #b480ff, 2px 0 25px #6a00ff;
     z-index: 3; }
 
-/* line 86, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+/* line 87, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
 #side-toggle {
   position: absolute;
   top: 0;
@@ -83,13 +84,13 @@ h2, h3 {
   z-index: 1;
   transition: left 250ms ease;
   margin: 0 0 0 -1px; }
-  /* line 93, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 94, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side-toggle:checked {
     left: 20vw; }
-    /* line 95, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+    /* line 96, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
     #side-toggle:checked ~ #side {
       left: 0; }
-  /* line 99, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+  /* line 100, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
   #side-toggle:before {
     content: "";
     cursor: pointer;
@@ -105,7 +106,7 @@ h2, h3 {
     width: 50px;
     height: 50px; }
 
-/* line 116, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
+/* line 117, Z:/xampp/htdocs/SolarSystem2/Planets/style/site.scss */
 footer {
   position: absolute;
   bottom: 0;
